website.css
/*GLOBAL STYLES*/
@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
@font-face { 
	font-family: 'Dharma';
	src: url('imgs/DharmaGothicE_Bold_R.otf');
}
body{
	margin: 0px;
}
h1{
	font-family: 'Lato', sans-serif;
	font-size: 95px;
}
h2{
    font-family: 'Lato';
    font-size: 16px;
    font-style: italic;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-weight: 400;
}
h3{
    font-family: 'Lato';
    font-size: 14px;
    letter-spacing: 1.5px;
    font-weight: 400;
}
h4{
	font-family: 'Dharma';
	font-size: 36px;
	margin-bottom: 10px;
	text-transform: uppercase;
}
p{
	font-family: 'Lato', sans-serif;
	font-size: 18px;
}
a{
	font-family: 'Lato', sans-serif;
	text-decoration: none;
	color: black;
}
.underline_link{
	text-decoration: underline;
}
.underline_link:hover{
    color: #D8625D;		
}

#nav_bar{
	font-family: 'Lato', sans-serif;
	font-size: 16px;
	letter-spacing: 2px;
	text-align: center;
    padding-top: 30px;
}
#nav_bar a{
	margin-left: 7px;
	margin-right: 7px;
}
#nav_bar a:hover{
	color: #D8625D;
	transition: color .3s;
	-webkit-transition: color .3s;
}
.white_nav_links{
	color: white;
}
footer{
	background-color: #1D2022;
	color: white;
	letter-spacing: 2px;
	text-align: center;
}
#footer_text{
	text-transform: uppercase;
	font-size: 14px;
	text-align: center
}
#footer_nav_bar{
	font-family: 'Lato', sans-serif;
	font-size: 16px;
	letter-spacing: 2px;
	text-align: center;
	padding-top: 30px;
}
#footer_nav_bar a{
    margin-top: 30px;
    color: white;
    text-decoration: none;	
    letter-spacing: 2px;
    margin-left: 7px;
	margin-right: 7px;
}
#footer_nav_bar a:hover{
	color: #F39431;
}
#footer_links{
	display: inline-block;
	text-align: center;
	margin-top: 30px;
}
#footer_links a{
	margin-left: 7px;
	margin-right: 7px;
}
.hundred_spacer{
	width: 100%;
	height: 100px;
}
.fifty_spacer{
	width: 100%;
	height: 50px;
}
.side_by_side{
    width: 100%;
    text-align: center;
}
.side_by_side div{
    display: inline-block;
}
.vertical_center{
    top: 50%;
    position: relative;
    transform: translateY(-50%);
}

/*-------------------------------------- END GLOBAL STYLES --------------------------------------*/



/*-------------------------------------- LANDER PAGE --------------------------------------*/
.portfolio_preview_updates{
    width: 100%;
    height: 300px;
    display: inline-block;
    -webkit-transition: all .2s;
    -moz-transition: all .2s;
    -ms-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}
.portfolio_preview_updates:hover{
    -webkit-transform: scale(1.3);
    -moz-transform: scale(1.3);
    -ms-transform: scale(1.3);
    -o-transform: scale(1.3);
    transform: scale(1.3);
}
.portfolio_preview_bio{
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    width: 355px;
    margin-left: auto;
    margin-right: auto;
}
.portfolio_preview_bio h2{
    font-size: 30px;
    color: white;
    letter-spacing: 4px;
    padding: 15px;
    display: inline-block;
    margin: 0px;
}
.portfolio_preview_bio p{
    font-size: 15px;
    color: white;
    font-weight: 100;
    margin: 0px;
    display: inline-block;
}
.proj1{
    background-color: rgb(237,114,92);
}
.proj2{
    background-color: rgb(52,68,89);
}
.proj3{
    background-color: rgb(165,219,219);
}
.proj4{
    background-color: rgb(253,105,0);
}
.proj5{
    background-color: rgb(245,134,30);
}
.proj6{
    background-color: rgb(85,38,51);
}
.proj7{
    background-color: rgb(52,68,89);
}
.proj8{
    background-color: rgb(237,114,92);
}
#portfolio_container_new{
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    background-color: #FDFDFD;
    border-top: 3px dotted #D0CFCF;
}
#portfolio_container_new p{
    letter-spacing: 3px;
}
.lander_container_new{
    width: 100%;
    height: 600px;
    text-align: center;
}
#lander_greeting1_new{
    display: inherit;
    margin-bottom: 0px;
    margin-top: 0px;
}
#lander_greeting2_new{
    display: inherit;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    width: 505px;
}
/*-------------------------------------- END LANDER PAGE --------------------------------------*/




/*-------------------------------------- INDIVIDUAL PROJECT PAGES --------------------------------------*/
.larger_project_image{
	width: 80%;
}
.smaller_project_image{
    width: 250px;
}
.text_and_photo{
    width: 100%;
}
.text_and_photo p{
    text-align: left;
}
.text_and_photo img{
    float: left;
    margin-right: 15px;
}
#project_description_text{
	font-size: 16px;
	width: 500px;
	margin-left: auto;
	margin-right: auto;
}
#project_name_text{
	margin-bottom: 30px;
	margin-top: 0px;
}
#long_project_name_text{
	font-size: 65px;
	margin-top: 0px;
	margin-bottom: 30px;
}
#project_link{
	position: relative;
	text-decoration: underline;
	font-size: 18px;
}
.next_project_link{
	font-size: 20px;
    border-right: 2px solid;
    border-left: 2px solid;
    padding-left: 15px;
    padding-right: 15px;
}
.next_project_link:hover{
    padding-left: 35px;
    padding-right: 35px;
    color: #F39431;
    -webkit-transition: padding-left .2s, padding-right .2s;
    -moz-transition: padding-left .2s, padding-right .2s;
    -ms-transition: padding-left .2s, padding-right .2s;
    -o-transition: padding-left .2s, padding-right .2s;
    transition: padding-left .2s, padding-right .2s;
}

/*-------------------------------------- END INDIVIDUAL PROJECT PAGES --------------------------------------*/



/*-------------------------------------- BLOG --------------------------------------*/

.blog_container{
	width: 100%;
	text-align: center;
}
.welcome_container{
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}
#posts{
    width: 100%;
    line-height: 0;
    border-bottom: 1px solid black;
    letter-spacing: 2px;
}
#posts_span{
    padding-left: 10px;
    padding-right: 10px;
    background-color: white;
}
/* ... */

